--- a/PA1_template.html
+++ b/PA1_template.html
@@ -12,6 +12,13 @@ output:
   pdf_document: default
 ---
 
+```{r global_options}
+
+knitr::opts_chunk$set(fig.path='Figs/')
+
+```
+
+
 ```{r setup, include = FALSE}
 
 knitr::opts_chunk$set(echo = TRUE)
@@ -46,7 +53,7 @@ data <- transform(data, date = as.Date(data$date))
 
 The table below presents the total number of steps taken per each day First 5 rows of the table
 
-```{r steps_per_day, echo= FALSE }
+```{r steps_per_day, echo= FALSE , fig.show = 'hold'}
 
 step_day <-  data %>%  
                 group_by(date) %>% 
@@ -59,7 +66,7 @@ kable(head(step_day), format = "simple", table.attr = "style = 'width:50%;'")
 
 The histogram below presents the total number of steps taken on each day
 
-```{r histogram of steps per day,  echo = TRUE, fig.height = 4, fig.width = 5}
+```{r histogram of steps per day,  echo = TRUE, fig.height = 4, fig.width = 5, fig.show = 'hold'}
  
   ggplot(step_day, aes(steps)) +
      geom_histogram(fill = "darkred")+
@@ -69,9 +76,9 @@ The histogram below presents the total number of steps taken on each day
      theme_classic()
 ```
 
-The mean and median of the total number of steps taken per day
+The mean and median of the total number of steps taken per day.
 
-```{r mean, median, total number of steps, echo = TRUE}
+```{r mean, median, total number of steps, echo = TRUE, fig.show = 'hold'}
 
 table <- matrix(NA, ncol = 2, nrow =  2)
 
@@ -84,7 +91,7 @@ kable(table, format = "simple", table.attr = "style = 'width:50%;'")
 
 ```
 
-```{r}
+```{r fig.show = 'hold'}
 
  mean_median <-  data %>% 
                       group_by(date) %>% 
@@ -99,7 +106,7 @@ kable(table, format = "simple", table.attr = "style = 'width:50%;'")
 
 Time series plot of 5 minute intervals and average numbers of steps taken, averaged across all days.
 
-```{r Average daily activity patter, echo = TRUE, fig.height = 4, fig.width = 5}
+```{r Average daily activity patter, echo = TRUE, fig.height = 4, fig.width = 5, fig.show = 'hold'}
 
    temp <- aggregate(data$steps ~ data$interval, FUN = mean)
  
@@ -191,7 +198,7 @@ As you may see, imputting the missing variables has changed the outlook of the g
 
 Code below creates a new factor variable that indicates whether the day is a weekday or a weekend.
 
-```{r Week_day_end, echo = TRUE}
+```{r Week_day_end, echo = TRUE, fig.show = 'hold'}
 
 days_table <- data.frame(day = c("Monday", "Tuesday", "Wednesday", 
                                   "Thursday", "Friday", "Saturday", "Sunday"),
@@ -211,7 +218,7 @@ kable(head(data3), format = "simple")
 
 Panel plot of a time series plot of the 5 minute interval and average number of steps taken, averaged across all weekday days and weekend days.
 
-```{r time series plot, echo = TRUE, fig.width = 5}
+```{r time series plot, echo = TRUE, fig.width = 5, fig.show = 'hold'}
 
 data3 %>% 
   group_by(day_end, interval) %>% 
@@ -322,6 +329,13 @@ output:
   pdf_document: default
 ---
 
+```{r global_options}
+
+knitr::opts_chunk$set(fig.path='Figs/')
+
+```
+
+
 ```{r setup, include = FALSE}
 
 knitr::opts_chunk$set(echo = TRUE)
@@ -356,7 +370,7 @@ data <- transform(data, date = as.Date(data$date))
 
 The table below presents the total number of steps taken per each day First 5 rows of the table
 
-```{r steps_per_day, echo= FALSE }
+```{r steps_per_day, echo= FALSE , fig.show = 'hold'}
 
 step_day <-  data %>%  
                 group_by(date) %>% 
@@ -369,7 +383,7 @@ kable(head(step_day), format = "simple", table.attr = "style = 'width:50%;'")
 
 The histogram below presents the total number of steps taken on each day
 
-```{r histogram of steps per day,  echo = TRUE, fig.height = 4, fig.width = 5}
+```{r histogram of steps per day,  echo = TRUE, fig.height = 4, fig.width = 5, fig.show = 'hold'}
  
   ggplot(step_day, aes(steps)) +
      geom_histogram(fill = "darkred")+
@@ -379,9 +393,9 @@ The histogram below presents the total number of steps taken on each day
      theme_classic()
 ```
 
-The mean and median of the total number of steps taken per day
+The mean and median of the total number of steps taken per day.
 
-```{r mean, median, total number of steps, echo = TRUE}
+```{r mean, median, total number of steps, echo = TRUE, fig.show = 'hold'}
 
 table <- matrix(NA, ncol = 2, nrow =  2)
 
@@ -394,7 +408,7 @@ kable(table, format = "simple", table.attr = "style = 'width:50%;'")
 
 ```
 
-```{r}
+```{r fig.show = 'hold'}
 
  mean_median <-  data %>% 
                       group_by(date) %>% 
@@ -409,7 +423,7 @@ kable(table, format = "simple", table.attr = "style = 'width:50%;'")
 
 Time series plot of 5 minute intervals and average numbers of steps taken, averaged across all days.
 
-```{r Average daily activity patter, echo = TRUE, fig.height = 4, fig.width = 5}
+```{r Average daily activity patter, echo = TRUE, fig.height = 4, fig.width = 5, fig.show = 'hold'}
 
    temp <- aggregate(data$steps ~ data$interval, FUN = mean)
  
@@ -501,7 +515,7 @@ As you may see, imputting the missing variables has changed the outlook of the g
 
 Code below creates a new factor variable that indicates whether the day is a weekday or a weekend.
 
-```{r Week_day_end, echo = TRUE}
+```{r Week_day_end, echo = TRUE, fig.show = 'hold'}
 
 days_table <- data.frame(day = c("Monday", "Tuesday", "Wednesday", 
                                   "Thursday", "Friday", "Saturday", "Sunday"),
@@ -521,7 +535,7 @@ kable(head(data3), format = "simple")
 
 Panel plot of a time series plot of the 5 minute interval and average number of steps taken, averaged across all weekday days and weekend days.
 
-```{r time series plot, echo = TRUE, fig.width = 5}
+```{r time series plot, echo = TRUE, fig.width = 5, fig.show = 'hold'}
 
 data3 %>% 
   group_by(day_end, interval) %>% 
@@ -542,6 +556,8 @@ data3 %>%
 </div>
 
 <div class="body">
+<pre><code class="language-r">knitr::opts_chunk$set(fig.path='Figs/')
+</code></pre>
 <h2>Loading and preprocessing the data</h2>
 <p>The code below unzips the data file, loads it in R and thereafter changes the class of the date column into a date class</p>
 <pre><code class="language-r">unzip(&quot;activity.zip&quot;)
@@ -571,7 +587,7 @@ data &lt;- transform(data, date = as.Date(data$date))
 <pre><code>## `stat_bin()` using `bins = 30`. Pick better value with `binwidth`.
 </code></pre>
 <p>![plot of chunk histogram of steps per day](Figs/histogram of steps per day-1.png)</p>
-<p>The mean and median of the total number of steps taken per day</p>
+<p>The mean and median of the total number of steps taken per day.</p>
 <pre><code class="language-r">table &lt;- matrix(NA, ncol = 2, nrow =  2)
 
 colnames(table) &lt;- c(&quot;Computation&quot;, &quot;Value&quot;)
